# django_consult_411

./: .env.example  .gitignore  README.md  bs5.excalidraw  pyproject.toml  requirements.txt
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mistral.py  models.py  signals.py  telegram_bot.py  views.py
core/migrations/: 0001_initial.py  0002_master_phone.py  0003_alter_master_options_master_email_and_more.py  0004_order.py  0005_alter_order_master.py  0006_review.py  0007_service.py  0008_order_services.py  0009_master_services.py  0010_order_created_at_order_status_order_updated_at.py  0011_alter_order_master_alter_order_status.py  (+3 more)
notes/: additional_forms.excalidraw  async.excalidraw  django_forms.excalidraw  lesson_47.md  lesson_48.md  lesson_48_MTV.excalidraw  lesson_48_imports.excalidraw  lesson_49.md  lesson_50.md  lesson_51.md  lesson_52.md  lesson_53.md  lesson_54.md  lesson_55.md  lesson_56.md  lesson_57.md  lesson_58_1.md  lesson_58_2.md  lesson_59.md  lesson_60.md  lesson_61.md  lesson_62.md  lesson_63.md  lesson_65.md  lesson_66.md  lesson_67.md  messages.excalidraw  orm.excalidraw  prompt.md  prompt_222_.md  search_form.excalidraw  templates.excalidraw  user_auth.excalidraw
templates/: base.html  first_template.html  landing.html  master_card_include.html  master_detail.html  master_list.html  nav_menu_include.html  order_card_include.html  order_form.html  order_form_class.html  order_list.html  review_form.html  thanks.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+13 files in other folders)
